--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,25 +1,27 @@
 - name: Silvia Caldararu
   photo: Silvia.jpg
-  info: Assistant professor in climate science, started June 2022
+  info: Assistant professor in climate science
   email: caldaras@tcd.ie
   number_educ: 3
-  education1: PhD School of GeoSciences, Univeristy of Edinburgh, 2013
-  education2: Postdoc Microsoft Research Cambridge, COmputational Ecology Group 2013 -2015
-  education3: Scientist, Max Planck Institute for Biogeochemistry, terrestrial Biosphere Modelling group 2015-2022
+  education1: Scientist, Max Planck Institute for Biogeochemistry, 2015-2022
+  education2: Postdoc Microsoft Research Cambridge, 2013 -2015
+  education3: PhD School of GeoSciences, Univeristy of Edinburgh, 2013
 
 - name: Gabriela Sophia
   photo: Gabriela.jpeg
-  info: PhD student (joint with Max Planck Institute for Biogeochemistry, started September 2021
+  info: Next-generation ecosystem models to simulate acclimation of plant nutrient-use strategies to global change
+  number_educ: 2
+  education1:  PhD student (joint with Max Planck Institute for Biogeochemistry), September 2021 - present
   email: gsophia@bgc-jena.mpg.de
-  number_educ: 1
-  education1: MSc Univeristy of Campinas, 2021
+  education2: MSc Univeristy of Campinas, 2021
 
 - name: Josua Seitz
   photo: josua.jpg
-  info: PhD student, started January 2023
+  info: Carbon dynamics in grasslands
   email: seitzj@tcd.ie
-  number_educ: 1
-  education1: MSc Umea University, 2021
+  number_educ: 2
+  education1: PhD student, January 2023 - present
+  education2: MSc Umea University, 2022
 
 
 
