--- a/_data/news.yml
+++ b/_data/news.yml
@@ -11,7 +11,7 @@
   headline: "Gabriela is working in Dublin for a month."
 
 - date: 14. Mar 2023
-  headline: "New pre-print on combining models with experiments opens our special issue in [Biogeosciences Discussions](https://bg.copernicus.org/preprints/bg-2023-47/) 
+  headline: "New pre-print on combining models with experiments opens our special issue in [Biogeosciences Discussions](https://bg.copernicus.org/preprints/bg-2023-47/)."
 
 - date: 2. Mar 2023
   headline: "Josua presents his work at the School postgraduate conference."
