--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 4. Aug 2023
-  headline: "New pre-print on plant-mycorrhizae interaction under elevated CO2 out in [Biogesciences Discussions](https://bg.copernicus.org/preprints/bg-2023-109/)." 
+  headline: "New pre-print on plant-mycorrhizae interaction under elevated CO2 out in [Biogeosciences Discussions](https://bg.copernicus.org/preprints/bg-2023-109/)." 
 
 - date: 26. Jun 2023
   headline: "The first QUINCY annual meeting takes place in Potsdam, Germany. A week of discussing modelling plans and seeing old and new friends! <img src='/images/newspic/QUINCY2023.png' class='img-responsive' style='max-width: 192px' />"
