--- a/_data/students.yml
+++ b/_data/students.yml
@@ -10,6 +10,8 @@
 
 - name: Aisling Brophy, 2023
   info: The effect of drought stress on the photosynthesis of two major food crops
+- name: Yannick Glosser, 2023
+  info: Teaching, Visualizing, and Interacting with Very Large Climate Models (School of Computer Science and Statistics, in collaboration with [Prof. Brendan Tangney](https://www.tcd.ie/research/profiles/?profile=dtangney))
 
 
 
