--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,8 +1,9 @@
 - name: Silvia Caldararu
   photo: Silvia.jpg
-  info: Assistant professor in climate science
+  info: Loosely in charge
   email: caldaras@tcd.ie
-  number_educ: 3
+  number_educ: 4
+  education1: Assistant professor in climate science, June 2022 - present
   education1: Scientist, Max Planck Institute for Biogeochemistry, 2015-2022
   education2: Postdoc Microsoft Research Cambridge, 2013 -2015
   education3: PhD School of GeoSciences, Univeristy of Edinburgh, 2013
