--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 7. Sep 2023
+  headline: "Gabriela presents her work on modelling leaf nutrient resorption at the European Conference on Ecological Modelling in Leipzig, Germany."
+
+- date: 6. Sep 2023
+  headline: "Final paper out in [Biogeosciences](https://bg.copernicus.org/articles/20/3637/2023/bg-20-3637-2023.html) on ways forward to using ecosystem experiments with process-based models." 
+
 - date: 4. Aug 2023
   headline: "New pre-print on plant-mycorrhizae interaction under elevated CO2 out in [Biogeosciences Discussions](https://bg.copernicus.org/preprints/bg-2023-109/)." 
 
