--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,12 @@
+- title: "Nitrogen Availability and Summer Drought, but not N:P Imbalance Drive Carbon Use Efficiency of a Mediterranean Tree-Grass Ecosystem"
+  image: dummy.png
+  description: ""
+  authors: Nair, R., Luo, Y., El-Madany, T., Rolo, V., Pacheco-Labrador, J., Caldararu, S., Morris, K. A., Schrumpf, M., Carrara, A., Moreno, G., Reichstein, M., and Migliavacca, M.
+  link:
+    url: https://doi.org/10.5194/egusphere-2023-2434
+    display: EGUsphere (2023)
+  highlight: 0
+  
 - title: "Beyond model evaluation – combining experiments and models to advance terrestrial ecosystem science"
   image: dummy.png
   description: ""
