--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: 1. Nov 2023
+  headline: "Silvia presents group work at the School of Geosciences, University of Edinburgh."
+
+- date: 31. Oct 2023
+  headline: "Silvia visits BiFoR FACE site <img src='/images/newspic/bifor.jpg' class='img-responsive' style='max-width: 192px' />"
+
+- date: 10. Oct 2023
+  headline: "Gabriela attends the ATTO conference and summaer school and the AmazonFACE meeting"
+
 - date: 7. Sep 2023
   headline: "Gabriela presents her work on modelling leaf nutrient resorption at the European Conference on Ecological Modelling in Leipzig, Germany."
 
