--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 17. Nov 2023
+  headline: "New paper out in [Science Advances](https://www.science.org/doi/10.1126/sciadv.adh9444): more realistic models predict higher CO2 uptake by terrestrial ecosystems."
+  
 - date: 1. Nov 2023
   headline: "Silvia presents group work at the School of Geosciences, University of Edinburgh."
 
