--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,12 @@
+- title: "Higher global gross primary productivity under future climate with more advanced representations of photosynthesis"
+  image: dummy.png
+  description: ""
+  authors: Knauer, K., Cuntz, M., Smith, B., Canadell, J.G., Medlyn B.E., Bennett, A., Caldararu5, S., Haverd, H.
+  link:
+    url: https://www.science.org/doi/10.1126/sciadv.adh9444
+    display: Science Advances (2023)
+  highlight: 0
+  
 - title: "Nitrogen Availability and Summer Drought, but not N:P Imbalance Drive Carbon Use Efficiency of a Mediterranean Tree-Grass Ecosystem"
   image: dummy.png
   description: ""
