--- a/_data/news.yml
+++ b/_data/news.yml
@@ -8,7 +8,7 @@
   headline: "Silvia visits BiFoR FACE site <img src='/images/newspic/bifor.jpg' class='img-responsive' style='max-width: 192px' />"
 
 - date: 10. Oct 2023
-  headline: "Gabriela attends the ATTO conference and summaer school and the AmazonFACE meeting"
+  headline: "Gabriela attends the ATTO conference and summer school and the AmazonFACE meeting"
 
 - date: 7. Sep 2023
   headline: "Gabriela presents her work on modelling leaf nutrient resorption at the European Conference on Ecological Modelling in Leipzig, Germany."
