--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -4,9 +4,9 @@
   email: caldaras@tcd.ie
   number_educ: 4
   education1: Assistant professor in climate science, June 2022 - present
-  education1: Scientist, Max Planck Institute for Biogeochemistry, 2015-2022
-  education2: Postdoc Microsoft Research Cambridge, 2013 -2015
-  education3: PhD School of GeoSciences, Univeristy of Edinburgh, 2013
+  education2: Scientist, Max Planck Institute for Biogeochemistry, 2015-2022
+  education3: Postdoc Microsoft Research Cambridge, 2013 -2015
+  education4: PhD School of GeoSciences, University of Edinburgh, 2013
 
 - name: Gabriela Sophia
   photo: Gabriela.jpeg
