--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 1. March 2024
+  headline: "Welcome to new group member Midori Yajima! Midori's PhD project will focus around whole plant phenology and integrating datasets at different scales with models.<img src='/images/newspic/meeting24.jpg' class='img-responsive' style='max-width: 192px' />"
+  
+- date: 13. Dec 2023
+  headline: "Silvia presents work on modelling grassland responses to drought under future climate conditions at the AGU Fall Meeting 2023 in San Francisco, US"
+
 - date: 17. Nov 2023
   headline: "New paper out in [Science Advances](https://www.science.org/doi/10.1126/sciadv.adh9444): more realistic models predict higher CO2 uptake by terrestrial ecosystems."
   
