--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,12 @@
+- title: "On the predictability of turbulent fluxes from land: PLUMBER2 MIP experimental description and preliminary results"
+  image: dummy.png
+  description: ""
+  authors: Abramowitz et al., including Caldararu, S
+  link:
+    url: https://egusphere.copernicus.org/preprints/2024/egusphere-2023-3084/#discussion
+    display: Biogeosciences Discussion (2024)
+  highlight: 0
+  
 - title: "Higher global gross primary productivity under future climate with more advanced representations of photosynthesis"
   image: dummy.png
   description: ""
