--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -24,5 +24,14 @@
   education1: PhD student, January 2023 - present
   education2: MSc Umea University, 2022
 
+- name: Midori Yajima
+  photo: midori.png
+  info: From species to ecosystem phenology in a changing climate
+  email: myajima@tcd.ie
+  number_educ: 3
+  education1: PhD student, March 2024 - present
+  education2: Visiting Researcher, Trinity College Dublin, 2021 - 2023
+  education3: MSc Ecology, Sapienza University of Rome, 2018 - 2020 
+
 
 
