News, pubs, jobs

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: 13. May 2024
+  headline: The 2nd annual QUINCY workshop takes places in Potsdam, Germany. A lot of science, sun and fun. We forgot to take a picture.
+  
+- date: 6. May 2024
+  headline: Midori attends CLEANFOREST COST action summer school.
+  
+- date: 15. April 2024
+  headline: Josua and Gabriela present their work at the EGU annual meeting in Vienna.
+  
 - date: 1. March 2024
   headline: "Welcome to new group member Midori Yajima! Midori's PhD project will focus around whole plant phenology and integrating datasets at different scales with models.<img src='/images/newspic/meeting24.jpg' class='img-responsive' style='max-width: 192px' />"
   
