--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,21 @@
+- title: "Leaf habit and nutrient availability drive leaf nutrient resorption globally"
+  image: dummy.png
+  description: ""
+  authors:  Sophia, G., Caldararu, S., Stocker, B., and Zaehle, S.
+  link:
+    url: https://egusphere.copernicus.org/preprints/2024/egusphere-2024-687/#discussion
+    display: Biogeosciences Discussion (2024)
+  highlight: 0
+  
+- title: "Modelled forest ecosystem carbon-nitrogen dynamics with integrated mycorrhizal processes under elevated CO2"
+  image: dummy.png
+  description: ""
+  authors: Thurner, M. A., Caldararu, S., Engel, J., Rammig, A., and Zaehle, S
+  link:
+    url: https://bg.copernicus.org/articles/21/1391/2024/bg-21-1391-2024.html
+    display: Biogeosciences (2024)
+  highlight: 0
+  
 - title: "On the predictability of turbulent fluxes from land: PLUMBER2 MIP experimental description and preliminary results"
   image: dummy.png
   description: ""
@@ -32,15 +50,6 @@
   link:
     url: https://bg.copernicus.org/articles/20/3637/2023/bg-20-3637-2023.html
     display: Biogeosciences (2023)
-  highlight: 0
-
-- title: "Modelled forest ecosystem carbon-nitrogen dynamics with integrated mycorrhizal processes under elevated CO2"
-  image: dummy.png
-  description: ""
-  authors: Thurner, M. A., Caldararu, S., Engel, J., Rammig, A., and Zaehle, S
-  link:
-    url: https://bg.copernicus.org/preprints/bg-2023-109/
-    display: Biogeosciences Discussion (2023)
   highlight: 0
 
 - title: "Predicting resilience through the lens of competing adjustments to vegetation function"
