--- a/_data/students.yml
+++ b/_data/students.yml
@@ -12,6 +12,11 @@
   info: The effect of drought stress on the photosynthesis of two major food crops
 - name: Yannick Glosser, 2023
   info: Teaching, Visualizing, and Interacting with Very Large Climate Models (School of Computer Science and Statistics, in collaboration with [Prof. Brendan Tangney](https://www.tcd.ie/research/profiles/?profile=dtangney))
-
+- name: Martha Delaney, 2024
+  info: Insights into Ecosystem Flux Dynamics A Comparative Study of Australian and European Variable Correlations and Predictors Using Random Forest Models
+- name: Alicia Brophy, 2024
+  info: Effect of elevated CO2 on carbon storage in three Irish forest sites from a land surface model
+- name: Damian Pawlowski, 2024
+  info: Enhancing Carbon Sequestration An Integrated Approach Using Big Data Modelling in Tree Species 
 
 
