--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   headline: The 2nd annual QUINCY workshop takes places in Potsdam, Germany. A lot of science, sun and fun. We forgot to take a picture.
   
 - date: 6. May 2024
-  headline: Midori attends CLEANFOREST COST action summer school.
+  headline: "Midori attends CLEANFOREST COST action summer school.<img src='/images/newspic/CLEANFOREST24.jpg' class='img-responsive' style='max-width: 192px' />"
   
 - date: 15. April 2024
   headline: Josua and Gabriela present their work at the EGU annual meeting in Vienna.
