--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -31,7 +31,20 @@
   number_educ: 3
   education1: PhD student, March 2024 - present
   education2: Visiting Researcher, Trinity College Dublin, 2021 - 2023
-  education3: MSc Ecology, Sapienza University of Rome, 2018 - 2020 
+  education3: MSc Ecology, Sapienza University of Rome, 2018 - 2020
 
+- name: Stephen Byrne
+  photo: stephen.jpg
+  info: Carbon dynamics in forestry  (main supervisor [Matt Saunders](https://www.tcd.ie/Botany/people/saundem/))
+  email: olearys3@tcd.ie
+  number_educ: 2
+  education1: PhD student, September 2022 - present
+  education2: BA Trinity College Dublin, 2020
 
-
+- name: Rebecca Rivera 
+  photo: Rebecca.jpg
+  info: Fungi and other microorganisms as indicators of Irish peatland response to climate change, health, and restoration (main supervisor [Carla Harper](https://www.tcd.ie/Botany/people/charper/))
+  email: riverar@tcd.ie
+  number_educ: 2
+  education1: PhD student, September 2022 - present
+  education2: BA Environmental Science, Trinity College Dublin, 2022
