--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 30. July 2024
+  headline: "Josua attend the Land Use and Ecosystem Change summer school in Garmisch-Partenkirchen (KIT Campus Alpin), Germany. <img src='/images/newspic/SummerSchoolGroup2024.jpg' class='img-responsive' style='max-width: 192px' />"
+  
 - date: 13. May 2024
   headline: The 2nd annual QUINCY workshop takes places in Potsdam, Germany. A lot of science, sun and fun. We forgot to take a picture.
   
