new people, publications and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: 7. October 2024
+  headline: Welcome to new group member Gayathri Girish Nair! Gayathri will be working on machine learning methods to advance vegetation projections for UK & Ireland, part of the Climate + Biodiversity + Water Co-centre.
+  
+- date: 1. October 2024
+  headline: Welcome to new group member Luke Daly! Luke will be working on plant plastiicty and integrating experiments and models, part of the Trait-Tweaks project. 
+  
+- date: 26. September 2024
+  headline: New paper out in [biogeosciences](https://bg.copernicus.org/articles/21/4169/2024/). Leaf nutrient resorption is driven by leaf type. This is Gabriela's first paper! 
+  
 - date: 30. July 2024
   headline: "Josua attend the Land Use and Ecosystem Change summer school in Garmisch-Partenkirchen (KIT Campus Alpin), Germany. <img src='/images/newspic/SummerSchoolGroup2024.jpg' class='img-responsive' style='max-width: 192px' />"
   
