--- a/_data/students.yml
+++ b/_data/students.yml
@@ -17,6 +17,8 @@
 - name: Alicia Brophy, 2024
   info: Effect of elevated CO2 on carbon storage in three Irish forest sites from a land surface model
 - name: Damian Pawlowski, 2024
-  info: Enhancing Carbon Sequestration An Integrated Approach Using Big Data Modelling in Tree Species 
+  info: Enhancing Carbon Sequestration An Integrated Approach Using Big Data Modelling in Tree Species
+- name: Gayathri Girish Nair, 2024
+  info: MycroForest – Exploring the use of a microworld to teach about economic viability of climate aware forest management (School of Computer Science and Statistics, in collaboration with [Prof. Brendan Tangney](https://www.tcd.ie/research/profiles/?profile=dtangney))
 
 
