--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -33,6 +33,24 @@
   education2: Visiting Researcher, Trinity College Dublin, 2021 - 2023
   education3: MSc Ecology, Sapienza University of Rome, 2018 - 2020
 
+- name: Gayathri Girish Nair
+  photo: gayathri.jpg
+  info: Integrating data and models for diversity, land use and climate
+  email: girishng@tcd.ie
+  number_educ: 3
+  education1: PhD student, September 2024 - present
+  education2: MSc Computer Science (Data Science), Trinity College Dublin, 2023 - 2024
+  education3: Machine Learning Engineer, Commtel Networks, 2022-2023
+
+- name: Luke Daly
+  photo: bio-photo.jpg
+  info: Plant trait plasticity from models and manipulative experiment networks
+  email: dalyl14@tcd.ie
+  number_educ: 3
+  education1: PhD student, September 2024 - present
+  education2: Research assistant, University College Dublin, 2022-2024
+  education3: BSc Biology, Maynooth University
+  
 - name: Stephen Byrne
   photo: stephen.jpg
   info: Carbon dynamics in forestry  (main supervisor [Matt Saunders](https://www.tcd.ie/Botany/people/saundem/))
